changes travis yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,10 @@ after_sucess:
   - docker build -t jorgemcunha/multi-nginx ./nginx
   - docker build -t jorgemcunha/multi-server ./server
   - docker build -t jorgemcunha/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+    # Take those images and push them to docker hub
+  - docker push jorgemcunha/multi-client
+  - docker push jorgemcunha/multi-nginx
+  - docker push jorgemcunha/multi-server
+  - docker push jorgemcunha/multi-worker
